# AccountStatementExtractor

./: README.md  pyproject.toml
output/: releve_compte_01_2024_012.json  releve_compte_02_2024_012.json  releve_compte_03_2024_012.json  releve_compte_04_2024_012.json  releve_compte_05_2024_012.json  releve_compte_06_2024_012.json  releve_compte_07_2024_012.json  releve_compte_08_2024_012.json  releve_compte_09_2024_012.json  releve_compte_10_2024_012.json  releve_compte_11_2024_012.json  releve_compte_12_2024_012.json  step1.txt
src/: compare_transactions.py  step1.py  step2.py
